# design_pattern

./: .gitignore  README.md
Bridge/: CMakeLists.txt
Bridge/include/: computer.h  os.h
Bridge/src/: computer.cpp  os.cpp
Bridge/test/: main.cpp
Builder/: CMakeLists.txt
Builder/include/: airship.h  airshipBuilder.h  airshipDirector.h  engine.h  escapeTower.h  orbitModule.h  shenzhou_airshipBuilder.h  shenzhou_airshipDirector.h
Builder/src/: shenzhou_airshipBuilder.cpp  shenzhou_airshipDirector.cpp
Builder/test/: main.cpp
Decorate/: CMakeLists.txt
Decorate/include/: decorator.h  phone.h
Decorate/src/: decorator.cpp  phone.cpp
Decorate/test/: main.cpp
Factory/: CMakeLists.txt  test.cpp
Factory/animal/: CMakeLists.txt  animal.cpp  animal.hpp
Factory/cat/: CMakeLists.txt  cat.cpp  cat.hpp
Factory/dog/: CMakeLists.txt  dog.cpp  dog.hpp
Factory/dove/: CMakeLists.txt  dove.cpp  dove.hpp
Factory/include/: BaseShape.hpp  Cycle.hpp  Diamond.hpp  Factory.hpp  Rect.hpp  Squire.hpp
Factory/self_resigter_factory/: CMakeLists.txt  Message.hpp  Message1.hpp  MessageFactory.hpp  MessageFatory1.hpp  main.cpp
Factory/src/: BaseShape.cpp  CMakeLists.txt  Cycle.cpp  Diamond.cpp  Factory.cpp  Rect.cpp  Squire.cpp
Factory/zones/: main.cpp
Memento/: CMakeLists.txt
Memento/include/: care_take.h  game_role.h  memento.h
Memento/src/: care_take.cpp  game_role.cpp  memento.cpp
Memento/test/: main.cpp
Observer/: CMakeLists.txt
Observer/include/: concrete_observer.h  concrete_subject.h  observer.h  subject.h
Observer/src/: concrete_observer.cpp  (+1 more)
Proxy/: CMakeLists.txt
Proxy/include/: real_star.h  star.h
Proxy/src/: real_star.cpp
Proxy/test/: main.cpp
Singleton/: CMakeLists.txt
State/: CMakeLists.txt
State/include/: state.h  war.h
State/src/: state.cpp  war.cpp
State/test/: main.cpp
Visitor/: CMakeLists.txt
(+5 files in other folders)
